Refactor days 1 and 2 to use literate programming

--- a/2022/Makefile
+++ b/2022/Makefile
@@ -1,3 +1,7 @@
+.PHONY: deps
+deps:
+	python -m pip install -r requirements.txt
+
 .PHONY: test
 test:
-	pytest --doctest-glob="*.md"
+	pytest --doctest-modules
